working on style with bootstrap4

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -5,15 +5,29 @@
     <head>
         <meta charset="UTF-8">
         <title>Admin</title>
-        <link type="text/css" rel="stylesheet" th:href="@{fmstyle.css}" />
+        <!--<link type="text/css" rel="stylesheet" th:href="@{fmstyle.css}" />-->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <h3>welcome to <i>admin</i> main page</h3>
-        <a th:href="@{/admin/books}">Books Manager</a>
-        <br/>
-        <a th:href="@{/admin/categories}">Categories Manager</a>
-        <form  action="#" th:action="@{/logout}" method="POST" id="logoutForm">
-            <input type="submit" value="Logout"/>
-        </form>
+        <div class="container">
+            <h1>welcome to <i>admin</i> main page</h1>
+            <ul class="nav">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/admin/books}">Books Manager</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/admin/categories}">Categories Manager</a>
+                </li>
+                <li>
+                    <form  action="#" th:action="@{/logout}" method="POST" id="logoutForm">
+                        <input class="btn btn-primary" type="submit" value="Logout"/>
+                    </form>
+                </li>
+            </ul>
+        </div>
     </body>
 </html>
