--- a/src/main/resources/static/fmstyle.css
+++ b/src/main/resources/static/fmstyle.css
@@ -1,5 +1,39 @@
-a {
+#books {
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+	border-collapse: collapse;
+	width: 100%;
+}
+
+#books td, #books th {
+	border: 1px solid #ddd;
+	padding: 8px;
+}
+
+#books tr:nth-child(even){background-color: #f2f2f2;}
+
+#books tr:hover {background-color: #ddd;}
+
+#books th {
+	padding-top: 12px;
+	padding-bottom: 12px;
+	text-align: left;
+	background-color: #4CAF50;
+	color: white;
+}
+
+a:link, a:visited {
+	background-color: #7c800b;
+	color: #000000;
+	border: 2px solid #5b5b5b;
+	padding: 10px 20px;
+	text-align: center;
 	text-decoration: none;
+	display: inline-block;
+}
+
+a:hover, a:active {
+	background-color: #802608;
+	color: white;
 }
 
 span.validationError {
@@ -14,7 +48,7 @@ div.validationErrorHead {
 
 body {
 	font-family: "Lato", sans-serif;
-	background-color: darkcyan;
+	background-color: #8b5308;
 }
 
 /* Fixed sidenav, full height */
