--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -5,28 +5,43 @@
     <head>
         <meta charset="UTF-8">
         <title>Books Manager</title>
-        <link type="text/css" rel="stylesheet" href="http://localhost:8080/firstmarket/fmstyle.css" />
+        <!--<link type="text/css" rel="stylesheet" th:href="@{fmstyle.css}" />-->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
         <script src="https://kit.fontawesome.com/9902891181.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <h1>Books Manager</h1>
-        <p><a th:href="@{/admin}">go back</a></p>
-        <p><a th:href="@{/admin/newBook}">new book</a></p>
-        <p>Please, to edit some book just click on the ISBN reference</p>
-        <br/>
-        <table border="1">
-            <tr>
-                <td/>
-                <td><b>ISBN</b></td>
-                <td><b>Title</b></td>
-                <td><b>Category</b></td>
-            </tr>
-            <tr th:each="book : ${books}">
-                <td><a th:href="@{/admin/deleteBook/{id}(id=${book.id})}"><i class='fas fa-trash-alt' style='color:red'></i></a></td>
-                <td><a th:href="@{/admin/editBook/{id}(id=${book.id})}"><span th:text="${book.isbn}">isbn</span></a></td>
-                <td><span th:text="${book.title}">title</span></td>
-                <td><span th:text="${book.category.name}">category</span></td>
-            </tr>
-        </table>
+        <div class="container">
+            <h1>Books Manager</h1>
+            <ul class="breadcrumb">
+                <li class="breadcrumb-item"><a th:href="@{/admin}">Admin</a></li>
+                <li class="breadcrumb-item active">Books Manager</li>
+            </ul>
+            <p><a class="btn btn-primary" th:href="@{/admin/newBook}">new book</a></p>
+            <table class="table">
+                <thead class="thead-light">
+                    <tr>
+                        <th>ISBN</th>
+                        <th>Title</th>
+                        <th>Category</th>
+                        <th/>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="book : ${books}">
+                        <td><span th:text="${book.isbn}">isbn</span></td>
+                        <td><span th:text="${book.title}">title</span></td>
+                        <td><span th:text="${book.category.name}">category</span></td>
+                        <td>
+                            <a th:href="@{/admin/editBook/{id}(id=${book.id})}"><i class="fas fa-pen"></i></a>
+                            <a th:href="@{/admin/deleteBook/{id}(id=${book.id})}"><i class='fas fa-trash-alt' style='color:red'></i></a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </body>
 </html>
