--- a/src/main/resources/templates/editCategory.html
+++ b/src/main/resources/templates/editCategory.html
@@ -5,50 +5,57 @@
     <head>
         <meta charset="UTF-8">
         <title>Category Edition</title>
-        <link type="text/css" rel="stylesheet" href="http://localhost:8080/firstmarket/fmstyle.css" />
+        <!--<link type="text/css" rel="stylesheet" th:href="@{fmstyle.css}" />-->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <h1>Category Page</h1>
-        <form action="#" th:action="@{/admin/editCategory}" th:object="${category}" method="POST">
-            <fieldset>
-                <div class="validationErrorHead" th:if="${#fields.hasErrors()}">
-                    <span>Please correct the problems below and resubmit.</span>
-                </div><br/>
-                <legend>Edit Category</legend>
-                <input type="hidden" th:field="*{id}"/>
-                <input type="hidden" th:field="*{parent.name}"/>
-                <div>
-                    <span>Name:<input type="text" th:field="*{name}"/></span>
-                    <span class="validationError" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Error</span>
-                </div>
-                <br/>
-                <div>
-                    <span>Nested under:</span>
-                    <select th:field="*{parent.id}">
-                        <option th:each="ic : ${indentedCategories}"
-                                th:value="${ic.id}"
-                                th:text="${ic.name}"
-                                th:selected="${ic.id==category.parent.id}"
-                                th:disabled="${descendants.contains(ic)}">
-                        </option>
-                    </select>
-                </div>
-                <br/>
-                <div>
-                    <span><input type="submit" value="Update Category"/></span>
-                </div>
-            </fieldset>
-        </form>
-        <br/>
-        <form action="#" th:action="@{/admin/deleteCategory}" th:object="${category}" method="POST">
-            <fieldset>
-                <legend>Delete Category</legend>
-                <input type="hidden" th:field="*{id}"/>
-                <div>
-                    <span><input type="submit" value="Delete Category"/></span>
-                </div>
-            </fieldset>
-        </form>
-        <p><a th:href="@{/admin/categories}">go back</a></p>
+        <div class="container">
+            <h1>Category Page</h1>
+            <form action="#" th:action="@{/admin/editCategory}" th:object="${category}" method="POST">
+                <fieldset>
+                    <div class="validationErrorHead" th:if="${#fields.hasErrors()}">
+                        <span>Please correct the problems below and resubmit.</span>
+                    </div><br/>
+                    <legend>Edit Category</legend>
+                    <input type="hidden" th:field="*{id}"/>
+                    <input type="hidden" th:field="*{parent.name}"/>
+                    <div>
+                        <span>Name:<input type="text" th:field="*{name}"/></span>
+                        <span class="validationError" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Error</span>
+                    </div>
+                    <br/>
+                    <div>
+                        <span>Nested under:</span>
+                        <select th:field="*{parent.id}">
+                            <option th:each="ic : ${indentedCategories}"
+                                    th:value="${ic.id}"
+                                    th:text="${ic.name}"
+                                    th:selected="${ic.id==category.parent.id}"
+                                    th:disabled="${descendants.contains(ic)}">
+                            </option>
+                        </select>
+                    </div>
+                    <br/>
+                    <div>
+                        <span><input type="submit" value="Update Category"/></span>
+                    </div>
+                </fieldset>
+            </form>
+            <br/>
+            <form action="#" th:action="@{/admin/deleteCategory}" th:object="${category}" method="POST">
+                <fieldset>
+                    <legend>Delete Category</legend>
+                    <input type="hidden" th:field="*{id}"/>
+                    <div>
+                        <span><input type="submit" value="Delete Category"/></span>
+                    </div>
+                </fieldset>
+            </form>
+            <p><a th:href="@{/admin/categories}">go back</a></p>
+        </div>
     </body>
 </html>
