--- a/src/main/resources/templates/newBook.html
+++ b/src/main/resources/templates/newBook.html
@@ -5,39 +5,51 @@
     <head>
         <meta charset="UTF-8">
         <title>New Book</title>
-        <link type="text/css" rel="stylesheet" href="http://localhost:8080/firstmarket/fmstyle.css" />
+        <!--<link type="text/css" rel="stylesheet" th:href="@{fmstyle.css}" />-->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <form action="#" th:action="@{/admin/newBook}" th:object="${book}" method="POST">
-        <fieldset>
-            <div class="validationErrorHead" th:if="${#fields.hasErrors()}">
-                <span>Please correct the problems below and resubmit.</span>
-            </div><br/>
-            <legend>New Book Form</legend>
-            <div>
-                <span>ISBN:<input type="text" th:field="*{isbn}"/></span>
-                <span class="validationError" th:if="${#fields.hasErrors('isbn')}" th:errors="*{isbn}">Error</span>
-            </div>
-            <br/>
-            <div>
-                <span>Title:<input type="text" th:field="*{title}"/></span>
-                <span class="validationError" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">Error</span>
-            </div>
-            <br/>
-            <div>
-                <span>Category:</span>
-                <select th:field="*{category.id}">
-                    <option th:each="ic : ${indentedCategories}"
-                            th:value="${ic.id}"
-                            th:text="${ic.name}"/>
-                </select>
-            </div>
-            <br/>
-            <div>
-                <span><input type="submit" value="Save Book"/></span>
-            </div>
-        </fieldset>
-        </form>
-        <p><a th:href="@{/admin/books}">go back</a></p>
+        <div class="container">
+            <ul class="breadcrumb">
+                <li class="breadcrumb-item"><a th:href="@{/admin}">Admin</a></li>
+                <li class="breadcrumb-item"><a th:href="@{/admin/books}">Books Manager</a></li>
+                <li class="breadcrumb-item active">New Book</li>
+            </ul>
+            <form action="#" th:action="@{/admin/newBook}" th:object="${book}" method="POST">
+            <fieldset>
+                <div class="validationErrorHead" th:if="${#fields.hasErrors()}">
+                    <span>Please correct the problems below and resubmit.</span>
+                </div><br/>
+                <legend>New Book Form</legend>
+                <div>
+                    <span>ISBN:<input type="text" th:field="*{isbn}"/></span>
+                    <span class="validationError" th:if="${#fields.hasErrors('isbn')}" th:errors="*{isbn}">Error</span>
+                </div>
+                <br/>
+                <div>
+                    <span>Title:<input type="text" th:field="*{title}"/></span>
+                    <span class="validationError" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">Error</span>
+                </div>
+                <br/>
+                <div>
+                    <span>Category:</span>
+                    <select th:field="*{category.id}">
+                        <option th:each="ic : ${indentedCategories}"
+                                th:value="${ic.id}"
+                                th:text="${ic.name}"/>
+                    </select>
+                </div>
+                <br/>
+                <div>
+                    <span><input type="submit" value="Save Book"/></span>
+                </div>
+            </fieldset>
+            </form>
+            <p><a th:href="@{/admin/books}">cancel</a></p>
+        </div>
     </body>
 </html>
