--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -14,20 +14,25 @@
     </head>
     <body>
         <div class="container">
-            <h1>welcome to <i>admin</i> main page</h1>
-            <ul class="nav">
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/admin/books}">Books Manager</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/admin/categories}">Categories Manager</a>
-                </li>
-                <li>
-                    <form  action="#" th:action="@{/logout}" method="POST" id="logoutForm">
-                        <input class="btn btn-primary" type="submit" value="Logout"/>
-                    </form>
-                </li>
-            </ul>
+            <div class="bg-primary text-white text-center">
+                <h2 class="font-weight-bold">admin</h2>
+                <h5><code class="text-white font-italic">- a great power comes with a great responsibility -</code></h5>
+            </div>
+            <nav class="navbar navbar-expand-sm bg-light">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/admin/books}">Books Manager</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/admin/categories}">Categories Manager</a>
+                    </li>
+                    <li class="nav-item">
+                        <form  action="#" th:action="@{/logout}" method="POST" id="logoutForm">
+                            <input class="btn btn-secondary btn-sm" type="submit" value="Logout"/>
+                        </form>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </body>
 </html>
