--- a/src/main/resources/templates/newBook.html
+++ b/src/main/resources/templates/newBook.html
@@ -19,37 +19,52 @@
                 <li class="breadcrumb-item"><a th:href="@{/admin/books}">Books Manager</a></li>
                 <li class="breadcrumb-item active">New Book</li>
             </ul>
-            <form action="#" th:action="@{/admin/newBook}" th:object="${book}" method="POST">
-            <fieldset>
-                <div class="validationErrorHead" th:if="${#fields.hasErrors()}">
+            <h1>New Book</h1>
+            <form action="#" th:action="@{/admin/newBook}" th:object="${book}" method="POST" class="needs-validation" novalidate>
+                <!--<div class="ServerValidationError" th:if="${#fields.hasErrors()}">
                     <span>Please correct the problems below and resubmit.</span>
-                </div><br/>
-                <legend>New Book Form</legend>
-                <div>
-                    <span>ISBN:<input type="text" th:field="*{isbn}"/></span>
-                    <span class="validationError" th:if="${#fields.hasErrors('isbn')}" th:errors="*{isbn}">Error</span>
+                </div>-->
+                <div class="form-group">
+                    <label for="isbn">ISBN:</label>
+                    <input type="text" th:field="*{isbn}" class="form-control" id="isbn" placeholder="enter isbn" name="isbn" required>
+                    <div class="invalid-feedback">Please fill out this field.</div>
+                    <!--<span class="ServerValidationError" th:if="${#fields.hasErrors('isbn')}" th:errors="*{isbn}">Error</span>-->
                 </div>
-                <br/>
-                <div>
-                    <span>Title:<input type="text" th:field="*{title}"/></span>
-                    <span class="validationError" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">Error</span>
+                <div class="form-group">
+                    <label for="title">Title:</label>
+                    <input type="text" th:field="*{title}" class="form-control" id="title" placeholder="enter title" name="title" required>
+                    <div class="invalid-feedback">Please fill out this field.</div>
                 </div>
-                <br/>
-                <div>
-                    <span>Category:</span>
-                    <select th:field="*{category.id}">
+                <div class="form-group">
+                    <label for="category">Category:</label>
+                    <select th:field="*{category.id}" class="custom-select" id="category" name="category">
                         <option th:each="ic : ${indentedCategories}"
                                 th:value="${ic.id}"
                                 th:text="${ic.name}"/>
                     </select>
                 </div>
-                <br/>
-                <div>
-                    <span><input type="submit" value="Save Book"/></span>
-                </div>
-            </fieldset>
+                <button type="submit" class="btn btn-primary">Save Book</button>
             </form>
-            <p><a th:href="@{/admin/books}">cancel</a></p>
         </div>
+        <script>
+            // Disable form submissions if there are invalid fields
+            (function() {
+                'use strict';
+                window.addEventListener('load', function() {
+                    // Get the forms we want to add validation styles to
+                    var forms = document.getElementsByClassName('needs-validation');
+                    // Loop over them and prevent submission
+                    var validation = Array.prototype.filter.call(forms, function(form) {
+                        form.addEventListener('submit', function(event) {
+                            if (form.checkValidity() === false) {
+                                event.preventDefault();
+                                event.stopPropagation();
+                            }
+                            form.classList.add('was-validated');
+                        }, false);
+                    });
+                }, false);
+            })();
+        </script>
     </body>
 </html>
