--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -14,45 +14,68 @@
     </head>
     <body>
         <div class="container">
-            <h1>Register</h1>
-            <p><a th:href="@{/}">go back</a></p>
-            <form action="#" th:action="@{/register}" th:object="${user}" method="POST" id="registerForm">
-                <div class="validationErrorHead" th:if="${#fields.hasErrors()}">
+            <ul class="breadcrumb">
+                <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
+                <li class="breadcrumb-item active">Registration</li>
+            </ul>
+            <h1>Registration</h1>
+            <form action="#" th:action="@{/register}" th:object="${user}" method="POST" id="registerForm" class="needs-validation" novalidate>
+                <!--<div class="ServerValidationError" th:if="${#fields.hasErrors()}">
                     <span>Please correct the problems below and resubmit.</span>
-                </div><br/>
-            <fieldset>
-                <legend>Registration Form</legend>
-                <div>
-                    <span>Username: <input type="text" th:field="*{username}"/></span>
-                    <span class="validationError" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">username Error</span>
-                </div><br/>
-                <div>
-                    <span>Password: <input type="password" th:field="*{password}"/></span>
-                    <span class="validationError" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">password Error</span>
-                </div><br/>
-                <!-- TODO: confirm password functionality
-                <div>
-                    <span>Confirm password: <input type="password" th:field="*{confirmPassword}"/></span>
-                    <span class="validationError" th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}">confirmPassword Error</span>
-                </div><br/>
-                -->
-                <div>
-                    <span>Full Name: <input type="text" th:field="*{firstName}"/></span>
-                    <span class="validationError" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">firstName Error</span>
-                </div><br/>
-                <div>
-                    <span>Street: <input type="text" th:field="*{lastName}"/></span>
-                    <span class="validationError" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">lastName Error</span>
-                </div><br/>
-                <div>
-                    <span>City: <input type="text" th:field="*{email}"/></span>
-                    <span class="validationError" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">email Error</span>
-                </div><br/>
-                <div>
-                    <span><input type="submit" value="Register"/></span>
+                </div>-->
+                <div class="form-group">
+                    <label for="username">Username:</label>
+                    <input type="text" th:field="*{username}" class="form-control" id="username" placeholder="enter username" name="username" required>
+                    <div class="invalid-feedback">Please fill out this field.</div>
+                    <!--<span class="ServerValidationError" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">username Error</span>-->
                 </div>
-            </fieldset>
+                <div class="form-group">
+                    <label for="password">Password:</label>
+                    <input type="text" th:field="*{password}" class="form-control" id="password" placeholder="enter password" name="password" required>
+                    <div class="invalid-feedback">Please fill out this field.</div>
+                    <!--<span class="ServerValidationError" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">password Error</span>-->
+                </div>
+                <!-- TODO: confirm password functionality -->
+                <div class="form-group">
+                    <label for="firstName">First Name:</label>
+                    <input type="text" th:field="*{firstName}" class="form-control" id="firstName" placeholder="enter firstName" name="firstName" required>
+                    <div class="invalid-feedback">Please fill out this field.</div>
+                    <!--<span class="ServerValidationError" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">firstName Error</span>-->
+                </div>
+                <div class="form-group">
+                    <label for="lastName">Last Name:</label>
+                    <input type="text" th:field="*{lastName}" class="form-control" id="lastName" placeholder="enter lastName" name="lastName" required>
+                    <div class="invalid-feedback">Please fill out this field.</div>
+                    <!--<span class="ServerValidationError" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">lastName Error</span>-->
+                </div>
+                <div class="form-group">
+                    <label for="email">E-mail:</label>
+                    <input type="text" th:field="*{email}" class="form-control" id="email" placeholder="enter email" name="email" required>
+                    <div class="invalid-feedback">Please fill out this field.</div>
+                    <!--<span class="ServerValidationError" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">email Error</span>-->
+                </div>
+                <button type="submit" class="btn btn-primary">Register</button>
             </form>
         </div>
+        <script>
+            // Disable form submissions if there are invalid fields
+            (function() {
+                'use strict';
+                window.addEventListener('load', function() {
+                    // Get the forms we want to add validation styles to
+                    var forms = document.getElementsByClassName('needs-validation');
+                    // Loop over them and prevent submission
+                    var validation = Array.prototype.filter.call(forms, function(form) {
+                        form.addEventListener('submit', function(event) {
+                            if (form.checkValidity() === false) {
+                                event.preventDefault();
+                                event.stopPropagation();
+                            }
+                            form.classList.add('was-validated');
+                        }, false);
+                    });
+                }, false);
+            })();
+        </script>
     </body>
 </html>
