--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,22 +14,46 @@
     </head>
     <body>
         <div class="container">
-            <h2>Login</h2>
-            <div class="validationErrorHead" th:if="${error}">
-                <span>Unable to login. Check your username and password.</span>
-            </div><br/>
-            <form action="#" th:action="@{/login}" method="POST" id="loginForm">
-                <div>
-                    <span>Username: <input type="text" name="username" id="username" /></span>
-                </div><br/>
-                <div>
-                    <span>Password: <input type="password" name="password" id="password" /></span>
-                </div><br/>
-                <div>
-                    <span><input type="submit" value="Login"/></span>
+            <ul class="breadcrumb">
+                <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
+                <li class="breadcrumb-item active">Login</li>
+            </ul>
+            <h1>Login</h1>
+            <form action="#" th:action="@{/login}" method="POST" id="loginForm" class="needs-validation" novalidate>
+                <div class="form-group">
+                    <label for="username">Username:</label>
+                    <input type="text" class="form-control" id="username" placeholder="enter username" name="username" required>
+                    <div class="invalid-feedback">Please fill out this field.</div>
                 </div>
-            </form><br/>
-            <span>New here? Click <a th:href="@{/register}">here</a> to register.</span>
+                <div class="form-group">
+                    <label for="password">Password:</label>
+                    <input type="password" class="form-control" id="password" placeholder="enter password" name="password" required>
+                    <div class="invalid-feedback">Please fill out this field.</div>
+                </div>
+                <button type="submit" class="btn btn-primary">Login</button>
+            </form>
+            <br/>
+            <span>New? Click <a th:href="@{/register}">here</a> to register.</span>
         </div>
+        <script>
+            // Disable form submissions if there are invalid fields
+            (function() {
+                'use strict';
+                window.addEventListener('load', function() {
+                    // Get the forms we want to add validation styles to
+                    var forms = document.getElementsByClassName('needs-validation');
+                    // Loop over them and prevent submission
+                    var validation = Array.prototype.filter.call(forms, function(form) {
+                        form.addEventListener('submit', function(event) {
+                            if (form.checkValidity() === false) {
+                                event.preventDefault();
+                                event.stopPropagation();
+                            }
+                            form.classList.add('was-validated');
+                        }, false);
+                    });
+                }, false);
+            })();
+        </script>
     </body>
 </html>
