--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -2,17 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Admin</title>
-        <!--<link type="text/css" rel="stylesheet" th:href="@{fmstyle.css}" />-->
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    </head>
+    <head th:replace="fragments::head"></head>
     <body>
+        <header th:replace="fragments::header"></header>
         <div class="container">
             <div class="bg-primary text-white text-center">
                 <h2 class="font-weight-bold">admin</h2>
@@ -34,5 +26,6 @@
                 </ul>
             </nav>
         </div>
+        <footer th:replace="fragments::footer"></footer>
     </body>
 </html>
