--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -2,18 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Books Manager</title>
-        <!--<link type="text/css" rel="stylesheet" th:href="@{fmstyle.css}" />-->
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-        <script src="https://kit.fontawesome.com/9902891181.js" crossorigin="anonymous"></script>
-    </head>
+    <head th:replace="fragments::head"></head>
     <body>
+        <header th:replace="fragments::header"></header>
         <div class="container">
             <h1>Books Manager</h1>
             <ul class="breadcrumb">
@@ -43,11 +34,7 @@
                 </tbody>
             </table>
         </div>
-        <!-- This code will enable all tooltips in the document -->
-        <script>
-            $(document).ready(function(){
-                $('[data-toggle="tooltip"]').tooltip();
-            });
-        </script>
+        <footer th:replace="fragments::footer"></footer>
+        <script th:replace="fragments::enableTooltips"></script>
     </body>
 </html>
