Added functionality to bind an image to a book on New Book workflow. That image can be a previously stored one or a brand new from uploading process

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -79,6 +79,23 @@
             })();
         </script>
 
+        <!-- Checkbox based switch to enable/disable two input tags mutexly.
+            checkbox.checked TRUE:  input1 disabled, input2 enabled
+            otherwise:              input1 enabled, input2 disabled
+        -->
+        <script th:fragment="binaryInputSwitch">
+            function binaryInputSwitch() {
+                if (document.getElementById('switch').checked == true) {
+                    document.getElementById("input1").disabled = true;
+                    document.getElementById("input2").disabled = false;
+                }
+                else {
+                    document.getElementById("input1").disabled = false;
+                    document.getElementById("input2").disabled = true;
+                }
+            }
+        </script>
+
     </body>
 
 </html>
